src/assets/scss/components/_portfolio.scss
.portfolio {
    @include flex-grid-row($width: 100%);
    $item-selector: '.portfolio__item';

    // @mixin portfolio-layout($n) {
    //     @include flex-grid-layout($n, $item-selector);

    //     &__item {

    //         border: $global-border-style;
    //         border-top: 0;

    //         // Give the first row a top border
    //         @for $this-n from 0 through $n {
    //             &:nth-child(#{$this-n}) {
    //                 border-top: $global-border-style;
    //             }

    //         }

    //         // Remove double inside borders
    //         @if $n > 1 {
    //             @for $this-n from 0 through ($n - 2) {
    //                 &:nth-child(#{$n}n + #{$this-n + 1}):not(:last-child) {
    //                     border-right: 0;
    //                 }
    //             }
    //         }

    //     }
    // }

    @include breakpoint(small only) {
        @include flex-grid-layout(1, $item-selector);
    }
    @include breakpoint(medium only) {
        @include flex-grid-layout(2, $item-selector);
    }
    @include breakpoint(large) {
        @include flex-grid-layout(3, $item-selector);
    }

    justify-content: flex-start;
    align-items: flex-start;



    &__item {
        $pad: ms(2);
        @include flex-grid-column($gutter: $pad);
        padding-bottom: $pad;

        @include breakpoint(medium) {
            $pad: ms(2);
            @include flex-grid-column($gutter: $pad);
            padding-left: $pad;
            padding-right: 0;
            padding-bottom: $pad;
        }
        @include breakpoint(large) {
            $pad: ms(3);
            @include flex-grid-column($gutter: $pad);
            padding-left: $pad;
            padding-right: 0;
            padding-bottom: $pad;
        }
        @include breakpoint(xxlarge) {
            $pad: ms(4);
            @include flex-grid-column($gutter: $pad);
            padding-left: $pad;
            padding-right: 0;
            padding-bottom: $pad;
        }

        transform: perspective(100vh);
        transition: transform .2s ease-out;

        &:hover {
            transform: perspective(100vh) translate3d(0, -3px, 10px);
        }

        &:active {
            transition: transform .1s ease-out;
            transform: perspective(100vh) translate3d(0, -3px, -5px);
        }

        & > * {
            display: block;
            position: relative;
        }

        &__preview {
            max-width: 100%;
            @include intrinsic-ratio(1);
        }

        &__image {
            background-size: cover;
            background-position: center;
            background-repeat: no-repeat;
        }

        &__heading {
            @extend h4;
        }

        p:last-child {
            margin-bottom: 0;
        }

        &__content {
            position: absolute;
            left: 0;
            top: 0;
            width: 100%;
            height: 100%;
            padding: 1em;

            display: flex;
            opacity: 0;
            flex-direction: column;
            justify-content: center;

            background: rgba(255,255,255,.5);
            color: $black;

            text-align: center;

            transition: opacity 0.4s ease-out, transform .1s ease-out;

            h2 {
                position: relative;

                &::after {
                    content: '';
                    display: block;
                    position: absolute;
                    left: 46%;
                    bottom: 0;
                    width: 8%;
                    height: 100%;
                    border-bottom: $global-border-width solid $black;
                }
            }
        }

        &:hover {
            .portfolio__item__content {
                opacity: 1;
            }
        }
    }
}

